Bookings system added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1> Home </h1>
 
-<%= link_to 'log in here', login_index_path %>
+<%= link_to 'Log in here', '/login' %>
+<%= link_to 'Book your game', bookings_path %>
