--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,5 +1,3 @@
-@import "bootstrap";
-
 .navbar{
     justify-content: flex-start;
 }
@@ -19,6 +17,6 @@
 }
 
 /*
-* require_self .
-* require_tree
- */
+require_self .
+require_tree
+*/
