intial login added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1> Home </h1>
 
-<%= link_to 'Log in here', '/login' %>
+<%= link_to 'Log in here', 'views/sign_in' %>
 <%= link_to 'Book your game', new_booking_path %>
