--- a/app/assets/stylesheets/home_style.css
+++ b/app/assets/stylesheets/home_style.css
@@ -13,7 +13,7 @@ header {
     z-index: 9999;
     width: 100%;
     height: 100vh;
-    background: url(soccer-players-action-professional-stadium.jpg) no-repeat 50% 50%;
+    background: url(ney-paper.jpg) no-repeat 50% 50%;
     background-size: cover;
 }
 
