--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,16 +9,10 @@
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <%= stylesheet_link_tag 'home_style' %>
 </head>
 <body>
-
-<% if user_signed_in? %>
-  <%= button_to 'Sign Out', destroy_user_session_path, method: :delete%>
-<% else %>
-  <%= link_to 'Log in here', new_user_session_path %>
-<% end %>
-<%= link_to 'Book your game', new_booking_path%>
-
 </body>
 
 </html>
